--- a/index.html
+++ b/index.html
@@ -15,20 +15,6 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/vegas.slider.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-        <script src="js/respond.min.js"></script>
-    <![endif]-->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144098545-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-144098545-1');
-    </script>
 </head>
 
 <body>
@@ -66,7 +52,7 @@
             <!-- Sidebar Footer -->
             <div class="footer1"> <span class="separator"></span>
                 <p>Olivia & Enrico wedding
-                    <br />15 December 2022, New York
+                    <br />Cover by me 2022
                 </p>
             </div>
         </aside>
